# netforge

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.dev.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_seed.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/auth/: __init__.py
backend/app/models/: __init__.py  base.py  core.py  device.py  ip.py  link.py  port.py  subnet.py  switch.py  user.py  vlan.py
backend/app/routers/: health.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py
backend/tests/: test_health.py
docs/: 01-vision.md  02-architecture.md  03-data-model.md  04-api.md  05-frontend.md  06-auth.md  07-deployment.md  08-import-csv.md  09-topology.md  10-roadmap.md  11-security.md
scripts/: backup.sh  restore.sh
